# mcp_hackathon

./: .env.example  .gitignore  README.md  pyproject.toml
.windsurf/rules/: agentic.md
docs/: implementation.md  journal.md  new_implementation.md
mcp_deploy/: .env.example  README.md  app.py  app_documentation.py  app_security.py
src/: __init__.py  app.py
src/agents/: __init__.py  base_agent.py  doc_agent.py  orchestrator_agent.py  security_agent.py
src/core/: __init__.py  exceptions.py  llm.py  logging_config.py  mcp_tools.py  observability.py  schemas.py  utils.py
src/mcp_server/: __init__.py  main.py
src/orchestrator/: main.py
src/ui/: __init__.py  app.py
src/ui/custom_components/codeanalysisviewer/: pyproject.toml
src/ui/custom_components/codeanalysisviewer/frontend/: Index.svelte  package-lock.json  package.json
src/workflows/: code_analysis_workflow.py
tests/agents/: mock_agent.py  test_mock_agent.py
