[project]
name = "multi_agent_code_analysis_system"
version = "0.1.0"
description = "A sophisticated multi-agent code analysis system."
requires-python = ">=3.12"

dependencies = [
    "llama-index",
    "modal",
    "fastapi"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
python_files = "test_*.py tests_*.py *_test.py *_tests.py"
python_classes = "Test* Tests*"
python_functions = "test*"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agents",
    "src/core",
    "src/mcp_server"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
